# cmakeTemplate

./: .gitignore  CMakeConfig.ini  CMakeLists.txt  CMakePresets.json  CMakePresets_.json  Doxyfile  README.md
include/: defines.h  functions.h  winMgr.h
resources/: resources.h  resources.rc
src/: functions.cpp  main.cpp  winMgr.cpp
toolchains/: lib-asionetwork.cmake  lib-daisysp.cmake  lib-elements.cmake  lib-imgui.cmake  lib-json.cmake  lib-juce.cmake  lib-miniaudio.cmake  lib-q.cmake  mingw-clang64.cmake  mingw-mingw64.cmake  msvc.cmake  readINI.cmake
toolchains/tmp/: gcc-linux.cmake  linux-native.cmake  mingw-ucrt.cmake
